# job-search-pipeline

./: .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  conftest.py  dev.md  env.fake.sh  export.sh  info.sh  init.sh  package.json  pyproject.toml  setup.sh  version.txt
candidate/: application_letter.example.html  candidate.fake.json  cover_letter.template.fake.html  exists.sh  info.fake.json  resume.example.md  resume.fake.md  search.example.json  search.fake.json
candidate/llm/application_email/node/: gpt-5-mini_reasoning-high.md  gpt-5-mini_reasoning-medium.md
candidate/llm/application_email/prompt/: system.fake.md  system.md  user.md  user.xml
candidate/llm/application_letter/: template.fake.html  template.html
candidate/llm/application_letter/node/: gpt-5-mini_reasoning-high.md  gpt-5-mini_reasoning-medium.md  nemotron-3-nano_30b.md
candidate/llm/application_letter/prompt/: system.fake.md  system.md  user.md  user.xml
candidate/llm/compatibility_score/node/: gpt-5-mini_reasoning-low.md  gpt-5-mini_reasoning-medium.md  nemotron-3-nano_30b.md
candidate/llm/compatibility_score/prompt/: system.fake.md  system.md  user.md  user.xml
candidate/llm/cover_letter/node/: gpt-5-mini_reasoning-high.md  gpt-5-mini_reasoning-medium.md
candidate/llm/cover_letter/prompt/: system.fake.md  system.md  user.md
candidate/llm/email_writer/node/: gpt-5-mini_reasoning-high.md  gpt-5-mini_reasoning-medium.md
candidate/llm/email_writer/prompt/: system.fake.md  user.md
candidate/llm/job_level/node/: gpt-5-mini_reasoning-low.md
candidate/llm/job_level/prompt/: system.md
candidate/llm/job_score/node/: deepseek-r1_1.5b.md  gpt-5-mini.md  gpt-5-mini_reasoning-low.md  gpt-5-mini_reasoning-medium.md  nemotron-3-nano_30b.md
candidate/llm/job_score/prompt/: system.fake.md  system.md  user.md
ci/: docker-compose.template.yaml  docker-compose.yaml  docker-compose.yaml.tmpl  environment.template.yaml  environment.yaml.tmpl  generate_version.py  n8n-task-runners.Dockerfile  n8n-task-runners.json  n8n.Dockerfile
cover_letter/llm/: gpt-5-mini.md
cover_letter/parse/: code.js  code.test.js
cover_letter/prompt/: system.md  user.md
dev/ollama/: cover_letter.sh  job_score.sh  simple.sh
dev/openai/: simple.sh
docs/devel/: README.md
docs/devel/direnv/: README.md
docs/devel/uv/: README.md
fetch/indeed/: code.py  query_dirtytest.py
fetch/utils/: salary.py  salary_test.py  wait.js
fetch/utils/salary/: CAD 17-17 hourly.txt  CAD 19 hourly.txt  CAD 25 hourly.txt  na_0.txt  na_1.txt  na_2.txt  na_3.txt
job_score/llm/: gpt-5-mini.md
job_score/parse/: code.js  code.test.js
job_score/prompt/: system.md  user.md
job_search_pipeline/: __init__.py  version.py
job_search_pipeline/query/: __init__.py  code.py  query.py  query_dirtytest.py
job_search_pipeline/utils/: __init__.py  wait.js
job_search_pipeline/utils/format/: __init__.py  company_name.py  job_level.py  job_level_test.py  job_title.py  job_title_test.py  salary.py  salary_test.py  value.py
job_search_pipeline/utils/parse/: __init__.py  common.js  job_level_test.py  salary_test.py
job_search_pipeline/utils/pdf/: code.py
ollama/: cover_letter.sh  job_score.sh  simple.sh
openai/: simple.sh
resume/: content.fake.md  location.fake.txt  query.fake.txt
src/indeed/: code.py
src/query/: code.py  code_dirtytest.py  query_dirtytest.py
src/utils/: __init__.py
src/utils/format/: job_title.py  job_title.test.py  salary.py  salary.test.py
src/utils/pdf/: code.py
tools/: utils.sh
tools/git/: utils.sh
workflows/: job-listings-developer.json  job-listings-general.json  job-listings-merge.sql  job-listings-score.json  job-listings.json  job-listings_llm-developer.json  job-listings_llm-general.json  job-match-scoring.json  redact.sh  update.sh
(+28 files in other folders)
