[project]
name = "job-search-pipeline"
version = "0.1.0"
# see: https://packaging.python.org/en/latest/guides/licensing-examples-and-user-scenarios/
license = "MIT"
authors = [
  {name = "Sébastien Kéroack"}
]
maintainers = [
  {name = "Sébastien Kéroack", email = "dev@sebastienkeroack.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
keywords = ["job-search-pipeline"]
requires-python = ">=3.12"

[tool.pytest.ini_options]
# see: https://docs.pytest.org/en/stable/reference/reference.html
python_files = ["*.test.py"]
norecursedirs = ["third_party"]
addopts = ["--import-mode=importlib"]